--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ https://templatemo.com/tm-548-training-studio
                             <div class="right-content">
                                 <h4>Body Building Course</h4>
                                 <p>Suspendisse fringilla et nisi et mattis. Curabitur sed finibus nisi. Integer nibh sapien, vehicula et auctor.</p>
-                                <!-- <a href="#" class="text-button">Discover More</a> -->
+                                <a href="#" class="text-button">Discover More</a>
                             </div>
                         </li>
                     </ul>
